--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@aws-amplify/ui-react": "^6.0.4",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.7",
     "aws-amplify": "^6.0.6",
+    "dayjs": "^1.11.6",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-tailwindcss-datepicker": "^1.6.6",
-    "@tailwindcss/forms": "^0.5.7",
-    "dayjs": "^1.11.6"
+    "react-tailwindcss-datepicker": "^1.6.6"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^0.6.0",
