--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dayjs": "^1.11.6",
     "next": "14.0.3",
     "react": "^18",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-tailwindcss-datepicker": "^1.6.6"
   },
   "devDependencies": {
@@ -25,10 +27,11 @@
     "@aws-amplify/backend-cli": "^0.9.2",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.3.2"
   }
 }
