--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.0.6",
     "@aws-amplify/ui-react": "^6.0.4",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^1.0.6",
