Update Active Principal model

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@tailwindcss/forms": "^0.5.7",
     "aws-amplify": "^6.0.6",
     "dayjs": "^1.11.6",
+    "lodash": "^4.17.21",
+    "lodash.chunk": "^4.2.0",
+    "moment": "^2.29.4",
     "next": "14.0.3",
     "react": "^18",
     "react-datepicker": "^4.24.0",
