--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.0.6",
+    "@aws-amplify/core": "^6.0.7",
+    "@aws-amplify/storage": "^6.0.7",
     "@aws-amplify/ui-react": "^6.0.4",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^1.0.6",
@@ -34,6 +36,7 @@
     "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "aws-cdk-lib": "^2.103.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.2"
